--- a/.github/workflows/realpack-ci.yml
+++ b/.github/workflows/realpack-ci.yml
@@ -64,7 +64,7 @@ jobs:
     - name: Upload coverage
       uses: actions/upload-artifact@v4
       with:
-        name: coverage
+        name: coverage-${{ matrix.cpp_compiler }}
         path: ${{ steps.strings.outputs.build-output-dir }}/Testing
 
     - name: Dump folder
