--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,7 @@ project(realpack
         LANGUAGES CXX)
 
 add_subdirectory(realpack)
+add_subdirectory(libmath)
 
 include(CTest)
 if (BUILD_TESTING)
