--- a/src/libmath/CMakeLists.txt
+++ b/src/libmath/CMakeLists.txt
@@ -8,6 +8,10 @@ target_link_libraries(realpack_math PUBLIC
   realpack
 )
 
+if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+  target_compile_options(realpack_math PRIVATE -stdlib=libc++)
+endif()
+
 if(MSVC)
   target_compile_options(realpack_math PRIVATE /W4 /WX)
 else()
