--- a/.github/workflows/realpack-ci.yml
+++ b/.github/workflows/realpack-ci.yml
@@ -17,7 +17,6 @@ jobs:
       # To add more build types (Release, Debug, RelWithDebInfo, etc.) customize the build_type list.
       matrix:
         os: [ubuntu-latest, windows-latest]
-        build_type: [Release]
         c_compiler: [gcc, clang, cl]
         include:
           - os: windows-latest
@@ -55,15 +54,14 @@ jobs:
         cmake -B ${{ steps.strings.outputs.build-output-dir }}
         -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }}
         -DCMAKE_C_COMPILER=${{ matrix.c_compiler }}
-        -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
         -S "${{ github.workspace }}/src"
 
     - name: Build
-      run: cmake --build ${{ steps.strings.outputs.build-output-dir }} --config ${{ matrix.build_type }}
+      run: cmake --build ${{ steps.strings.outputs.build-output-dir }}
 
     - name: Test
       working-directory: ${{ steps.strings.outputs.build-output-dir }}
-      run: ctest --build-config ${{ matrix.build_type }} -T Test -T Coverage
+      run: ctest -T Test -T Coverage
 
     - name: Upload code coverage
       uses: actions/upload-artifact@v4
