--- a/src/libmath/CMakeLists.txt
+++ b/src/libmath/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_library(realpack_math
   source/tokenizer.cpp
+  source/tokenizer_utils.cpp
 )
 target_include_directories(realpack_math PUBLIC
   ${CMAKE_CURRENT_SOURCE_DIR}/include
